[gd_scene load_steps=16 format=4 uid="uid://5ru71tluvpvm"]

[ext_resource type="Script" uid="uid://ypl62fdw7hss" path="res://Prefab/GUI/InformationPanel/InformationPanel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b0f50r6g0vq5t" path="res://Asset/Texture/TowerDefense/InformationPanel/DecorationUI_01.png" id="2"]
[ext_resource type="Texture2D" uid="uid://ceqaimccnt56q" path="res://Asset/Texture/TowerDefense/PacketBank/AlmanacGroundDay.jpg" id="3"]
[ext_resource type="Texture2D" uid="uid://tbx7ai4cmc1u" path="res://Asset/Texture/TowerDefense/InformationPanel/InformationPanelPlant.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b5n84f4ahwkg0" path="res://Asset/Texture/TowerDefense/InformationPanel/DecorationUI_02.png" id="5"]
[ext_resource type="FontFile" uid="uid://coqskwlqtnypf" path="res://Asset/Font/fzkt.ttf" id="6"]
[ext_resource type="PackedScene" uid="uid://cdnyb8d1qw7g4" path="res://Prefab/GUI/Button/SpriteBrightButton/SpriteBrightButton.tscn" id="7"]
[ext_resource type="Shader" uid="uid://bi8x813unwm5l" path="res://Asset/Shader/ShaderBright.gdshader" id="8"]
[ext_resource type="Texture2D" uid="uid://dh3hltqj5p55x" path="res://Asset/Texture/GUI/General/General/NextButton.png" id="9"]
[ext_resource type="PackedScene" uid="uid://bgkuthysw0876" path="res://Prefab/GUI/Button/NinePatchButtonBase/NinePatchButtonBase.tscn" id="10"]

[sub_resource type="ButtonGroup" id="ButtonGroup_0riwm"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_xrgw5"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_8snwf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k560q"]
shader = ExtResource("8")
shader_parameter/brightStrength = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o200j"]
shader = ExtResource("8")
shader_parameter/brightStrength = 0.0

[node name="InformationPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="TabTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.185
anchor_top = 0.042
anchor_right = 0.812
anchor_bottom = 0.459
offset_left = 314.0
offset_top = 24.0
offset_right = 352.0
offset_bottom = 172.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("2")

[node name="GroundTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.185
anchor_top = 0.042
anchor_right = 0.812
anchor_bottom = 0.459
offset_left = 50.926
offset_top = 11.9916
offset_right = 250.675
offset_bottom = 211.908
texture = ExtResource("3")

[node name="PanelTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 324.0
offset_bottom = 484.0
texture = ExtResource("4")

[node name="InformationTabButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 308.0
offset_top = 24.0
offset_right = 355.0
offset_bottom = 102.0
scale = Vector2(0.75, 0.75)
mouse_default_cursor_shape = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_0riwm")
texture_normal = SubResource("PlaceholderTexture2D_xrgw5")
texture_pressed = ExtResource("5")

[node name="InformationTabLabel" type="Label" parent="InformationTabButton"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 12.0
offset_top = 13.0
offset_right = 32.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0.764706, 0.356863, 0.145098, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("6")
text = "简介"
autowrap_mode = 1

[node name="CustomTabButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 308.0
offset_top = 75.0
offset_right = 355.0
offset_bottom = 153.0
scale = Vector2(0.75, 0.75)
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_0riwm")
texture_normal = SubResource("PlaceholderTexture2D_8snwf")
texture_pressed = ExtResource("5")

[node name="CustomTabLabel" type="Label" parent="CustomTabButton"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 12.0
offset_top = 16.0
offset_right = 32.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0.764706, 0.356863, 0.145098, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("6")
text = "装扮"
autowrap_mode = 1

[node name="SpriteNode" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 156.0
offset_top = 93.0
offset_right = 156.0
offset_bottom = 93.0

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 69.0
offset_top = 180.0
offset_right = 250.0
offset_bottom = 213.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("6")
theme_override_font_sizes/font_size = 24
text = "豌豆向日葵"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InformationNode" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0

[node name="ScrollContainer" type="ScrollContainer" parent="InformationNode"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 28.0
offset_top = 225.0
offset_right = 285.0
offset_bottom = 434.0

[node name="VBoxContainer" type="VBoxContainer" parent="InformationNode/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 16

[node name="ExpressionLabel" type="RichTextLabel" parent="InformationNode/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.560784, 0.262745, 0.105882, 1)
theme_override_fonts/normal_font = ExtResource("6")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[color=2f375e]攻产兼备的植物，梦开始的地方！[/color]
"
fit_content = true

[node name="HandbookExpressionLabel" type="RichTextLabel" parent="InformationNode/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.560784, 0.262745, 0.105882, 1)
theme_override_fonts/normal_font = ExtResource("6")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "韧性：[color=cc241d]300[/color]
威力：[color=cc241d]20/1.5s[/color]
范围：[color=cc241d]前方一行[/color]
特点：[color=cc241d]每25秒生产25阳光[/color]"
fit_content = true

[node name="HandbookStoryLabel" type="RichTextLabel" parent="InformationNode/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.560784, 0.262745, 0.105882, 1)
theme_override_fonts/normal_font = ExtResource("6")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "杂交植物们来自于和双子向日葵所诞生的同一个实验室。“但这不代表我们就是兄弟了，”双子向日葵说，“他们的诞生简直就是一场恐怖的悲剧！”
"
fit_content = true

[node name="InformationCostLabel" type="RichTextLabel" parent="InformationNode"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 28.0
offset_top = 436.0
offset_right = 285.0
offset_bottom = 451.0
size_flags_horizontal = 3
size_flags_vertical = 10
mouse_filter = 2
theme_override_colors/default_color = Color(0.560784, 0.262745, 0.105882, 1)
theme_override_fonts/normal_font = ExtResource("6")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "花费：200   "
fit_content = true

[node name="InformationColdDownLabel" type="RichTextLabel" parent="InformationNode"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 28.0
offset_top = 436.0
offset_right = 285.0
offset_bottom = 451.0
size_flags_horizontal = 3
size_flags_vertical = 10
mouse_filter = 2
theme_override_colors/default_color = Color(0.560784, 0.262745, 0.105882, 1)
theme_override_fonts/normal_font = ExtResource("6")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "冷却速度：50秒"
fit_content = true
horizontal_alignment = 2

[node name="CustomNode" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 0

[node name="CustomTextScrollContainer" type="ScrollContainer" parent="CustomNode"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 28.0
offset_top = 225.0
offset_right = 285.0
offset_bottom = 380.0

[node name="VBoxContainer" type="VBoxContainer" parent="CustomNode/CustomTextScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 16

[node name="CustomNameLabel" type="RichTextLabel" parent="CustomNode/CustomTextScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.560784, 0.262745, 0.105882, 1)
theme_override_fonts/normal_font = ExtResource("6")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[color=ff3eff]天使与恶魔[/color]
"
fit_content = true

[node name="CustomAccessLabel" type="RichTextLabel" parent="CustomNode/CustomTextScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.560784, 0.262745, 0.105882, 1)
theme_override_fonts/normal_font = ExtResource("6")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[color=red]获取方式[/color]:每日挑战
"
fit_content = true

[node name="CustomStoryLabel" type="RichTextLabel" parent="CustomNode/CustomTextScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.560784, 0.262745, 0.105882, 1)
theme_override_fonts/normal_font = ExtResource("6")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "杂交植物们来自于和双子向日葵所诞生的同一个实验室。“但这不代表我们就是兄弟了，”双子向日葵说，“他们的诞生简直就是一场恐怖的悲剧！”
"
fit_content = true

[node name="PreCustomButton" parent="CustomNode" instance=ExtResource("7")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_k560q")
layout_mode = 0
offset_left = 27.0
offset_top = 400.0
offset_right = 87.0
offset_bottom = 460.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("9")
flip_h = true

[node name="EquipmentButton" parent="CustomNode" instance=ExtResource("10")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 79.0
offset_top = 402.0
offset_right = 235.0
offset_bottom = 444.0
text = "装备装扮"

[node name="LabelText" parent="CustomNode/EquipmentButton/CenterContainer" index="0"]
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "装备装扮"

[node name="NextCustomButton" parent="CustomNode" instance=ExtResource("7")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_o200j")
layout_mode = 0
offset_left = 243.0
offset_top = 399.0
offset_right = 303.0
offset_bottom = 459.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("9")

[node name="NooneCustomLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 17.0
offset_top = 218.0
offset_right = 293.0
offset_bottom = 458.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 36
text = "暂无装扮"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="InformationTabButton" to="." method="TabButtonPresed"]
[connection signal="pressed" from="CustomTabButton" to="." method="TabButtonPresed"]
[connection signal="pressed" from="CustomNode/PreCustomButton" to="." method="PreCustomButtonPressed"]
[connection signal="pressed" from="CustomNode/EquipmentButton" to="." method="EquipmentButtonPressed"]
[connection signal="pressed" from="CustomNode/NextCustomButton" to="." method="NextCustomButtonPressed"]

[editable path="CustomNode/EquipmentButton"]
